--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
-    "hono": "^3.12.3"
+    "hono": "^3.12.3",
+    "nightmare": "^3.0.2"
   },
   "devDependencies": {
     "@types/bun": "^1.0.0"
